feat: continue working with the css file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Умные спортивные площакдки</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
   </head>
   <header>
     <a href="https://sport.smart-rm.com/" class="custom-logo-link">
@@ -20,7 +21,7 @@
       <a href="https://sport.smart-rm.com/news/">Новости</a>
       <a href="https://sport.smart-rm.com/contact/">Контакты</a>
     </nav>
-    <button id="consultation">консультация</button>
+    <button id="burgundyButton">консультация</button>
   </header>
   <body>
     <p>
