feat: add sets section

--- a/index.html
+++ b/index.html
@@ -39,14 +39,20 @@
   </div>
   <div class="catalog">
     <div class="sets">
-      <p id="setsHead">Комплекты спортивно-технологического оборудования<br>
+      <p class="setsHead">Комплекты спортивно-технологического оборудования<br>
          для создания "умной" спортивной площадки</p>
-      <div id="set1">
-        <div id="">
-
+      <div class="set1">
+        <a href="https://sport.smart-rm.com/set1/" id="set1">Комплект 1</a>
+        <button class="burgundyButton">Получить техническое задание для закупки комплекта №1</button>
         </div>
-        <div id="set2"></div>
-        <div id="set3"></div>
+        <div class="set2">
+          <a href="https://sport.smart-rm.com/set2/" id="set2">Комплект 2</a>
+          <button class="burgundyButton" >Получить техническое задание для закупки комплекта №2</button>
+        </div>
+        <div class="set3">
+          <a href="https://sport.smart-rm.com/set3/" id="set3">Комплект 3</a>
+          <button class="burgundyButton" >Получить техническое задание для закупки комплекта №3</button>
+        </div>
       </div>
     </div>
 
