feat: continue fill html and css, to plug jquery and slider

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Умные спортивные площадки</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/slick.css" />
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <header>
@@ -90,7 +91,7 @@
         <h2>Что Вы получаете, работая с нами?</h2>
         <img src="/images/advantages.jpg" alt="" id="advantagesImage">
       </div>
-      <div class="advantagesDescription">
+      <div class="advantagesList">
         <div id="advantage">
           <img src="/images/галочка-кирпичная.png" alt="" id="check">
           <p>Содействие в подготовке технического задания (ТЗ) и описания объекта закупки</p>
@@ -118,11 +119,165 @@
       <button class="tranparentButton">подробнее</button>
     </form>
   </div>
+  <div class="content">
+    <div class="about">
+      <div class="aboutCompany">
+        <h2>О компании</h2>
+        <div class="statistics">
+          <div id="stat">
+            <h2>99%</h2>
+            <p>допусков к тендерам</p>
+          </div>
+          <div id="stat">
+            <h2>300+</h2>
+            <p>заказчиков компании</p>
+          </div>
+          <div id="stat">
+            <h2>600+</h2>
+            <p>тендеров реализовано</p>
+          </div>
+          <div id="stat">
+            <h2>1000+</h2>
+            <p>контрактов исполнено</p>
+          </div>  
+        </div>
+        <div class="aboutList">
+          <div id="aboutListItem1">
+            <img src="/images/Комплексное-оснащение.png" alt="">
+            <p>С 2018 года команда ООО «Смарт Групп» занимается комплексным оснащением объектов.
+              Мы работаем только с известными проверенными поставщиками и за счет этого можем
+              гарантировать Вам качество и сроки. Репутация надежного поставщика для нас 
+              является основной ценностью компании. Долгосрочные отношения с клиентами — наша
+              первостепенная задача.</p>
+          </div>
+          <div id="aboutListItem2">
+            <p>ООО «Смарт Групп» активно участвует в приоритетных национальных программах.
+              За это время выполнено 38 больших проектов: в том числе в сотрудничестве с
+              региональными министерствами культуры и образования, общероссийскими некоммерческими
+              организациями и спортивными объектами.</p>
+            <img src="/images/значок.png" alt="">
+          </div>
+          <div id="aboutListItem1">
+            <img src="/images/партнеры.png" alt="">
+            <p>Компания ООО «Смарт Групп» сотрудничает с крупными мировыми производителями,
+              такими как Jonson, Polar, Precor, Foreman, Matrix, Bamard и многие другие, что
+              позволяет оснащать качественным и современным оборудованием спортивные комплексы
+              различной направленности.</p>
+          </div>
+          <div id="aboutListItem2">
+            <p>Мы стабильно предоставляем услуги и предлагаем оптимальные решения в сфере госзаказа
+              по 44-ФЗ (ранее 94-ФЗ) и 223-ФЗ. За это время команда ООО «Смарт Групп» зарекомендовала
+              себя как надежная и стремительно развивающаяся компания.</p>
+            <img src="/images/госзаказ.png" alt="">
+          </div>
+          <div id="aboutListItem1">
+            <img src="/images/комплекты.png" alt="">
+            <p>Для оснащения «умных» спортивных площадок в соответствии с Приказом Минспорта
+              России от 15.02.2022 №107 у нас имеются готовые решения для каждого из комплектов.
+              Мы поможем составить перечень необходимого оборудования и окажем помощь в формировании
+              технического задания.</p>
+          </div>
+        
+      </div>
+      <div class="order">
+        <h2>Мы работаем в соответствии с Приказом Минспорта России от 15.02.22 №107</h2>
+        <p>Федеральный проект «Бизнес-спринт (Я выбираю спорт)» – это командная работа 
+          государства и бизнеса, чтобы сделать занятия спортом более доступными для граждан.</p>
+
+        <p>Ключевая цель до 2030 года – обеспечить долю 70% граждан, регулярно занимающихся спортом.
+          В рамках проекта Правительство России планирует создать в регионах около 1000 «умных» 
+          спортивных площадок.</p>
+        
+        <p>В соответствии с приказом Министерства Спорта России от 15.02.2022 № 107 был утвержден
+          перечень спортивно-технологического оборудования для создания «умной» спортивной площадки.</p>
+
+        <button id="whiteButton">читать приказ</button>
+      </div>
+      <div class="qrCodes">
+        <h2>Таблички с QR-кодами на спортивных снарядах</h2>
+        <p>«Умные» спортивные площадки появляются не только в России, а также в Великобритании,
+          Швеции, ОАЭ и других странах. Они называются так потому, что сообщают пользователям,
+          как правильно использовать тренажеры или играть в определенные командные игры, для
+          которых предназначена площадка.</p>
+
+        <p>На наших спортивных площадках для этого будут расположены специальные таблички с QR- кодами
+          в соответствии с Приказом Минспорта России от 15.02.22 №107.</p>
+
+        <div class="qrCodesPhotos">
+          <img src="/images/qr1.jpg" alt="">
+          <img src="/images/qr2.jpg" alt="">
+          <img src="/images/qr3.jpg" alt="">
+        </div>
+        <div class="qrCodesMinsport">
+          <h2>QR-коды согласно Приказу Минспорта России от 15.02.2022 №107</h2>
+          <div class="qrCodesMinsportList">
+            <div id="advantage">
+              <img src="/images/галочка-кирпичная.png" alt="" id="check">
+              <p>Со ссылкой на информационный ресурс по использованию тренажера. Имеющие их 
+                тренажеры оснащены также с креплением для мобильного телефона</p>
+            </div>
+            <div id="advantage">
+              <img src="/images/галочка-кирпичная.png" alt="" id="check">
+              <p>Со ссылкой на информационный ресурс с правилами игры в различные виды спорта</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="brands">
+        <h2>Мы работаем только с проверенными брендами</h2>
+        <div class="slider">
+          <div class="sliderItem">
+            <img src="/images/Bamard.jpg" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/bronze.jpg" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/carbon.jpg" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/foreman.jpg" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/horizon.png" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/jonson.png" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/matrix.png" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/oxygen.jpg" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/polar.jpg" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/vision.jpg" alt="">
+          </div>
+          <div class="sliderItem">
+            <img src="/images/body-solid.png" alt="">
+          </div>
+
+        </div>
+      </div>
+      <form action="" class="feedbackForm">
+
+      </form>
+    </div>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="/js/slick.min.js"></script>
   <script src="/js/script.js"></script>
 </body>
 <footer>
+  <div class="contacts">
 
+  </div>
+  <div class="copyright">
 
+  </div>
 </footer>
 
 </html>
