feat: edit slider

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Умные спортивные площадки</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/slick.css" />
+  <link rel="stylesheet" href="css/slick-theme.css" />
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <header>
@@ -269,6 +270,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="/js/slick.min.js"></script>
+  <!-- <script src="/js/slick.js"></script> -->
   <script src="/js/script.js"></script>
 </body>
 <footer>
