feat: edit order, qrCodes, consultation sections

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div id="advantage">
             <img src="/images/галочка-кирпичная.png" alt="" id="check">
             <p>Бесплатная доставка и монтаж всего перечня спортивно-технологического
-              оборудования для создания «умной» спортивной площадки</p>
+              оборудования для создания «умной» с портивной площадки</p>
           </div>
         </div>
       </div>
@@ -217,8 +217,8 @@
 
         <div class="qrCodesPhotos">
           <img src="/images/qr1.jpg" alt="">
-          <img src="/images/qr2.jpg" alt="">
-          <img src="/images/qr3.jpg" alt="">
+          <img src="/images/qr2.jpeg" alt="">
+          <img src="/images/qr3.jpeg" alt="">
         </div>
         <div class="qrCodesMinsport">
           <h2>QR-коды согласно Приказу Минспорта России от 15.02.2022 №107</h2>
